<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.main.menu.filter.FillterDialogFragment"
  >
<LinearLayout
    android:id="@+id/box_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >
    <ImageView
        android:id="@+id/close_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/baseline_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginStart="-30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/close_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/close_filter" />
</LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/srcoll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/box_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/all_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:text="@string/all_categories"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <GridLayout
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:columnCount="2"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/all_categories"></GridLayout>

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/price_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <EditText
                android:id="@+id/start_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ramka_for_editext"
                android:hint="От"
                android:inputType="number"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                app:layout_constraintStart_toStartOf="@+id/price_text"
                app:layout_constraintTop_toBottomOf="@+id/price_text"
                tools:layout_editor_absoluteY="8dp" />

            <EditText
                android:id="@+id/end_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ramka_for_editext"
                android:hint="До"
                android:inputType="number"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/start_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="@+id/start_count" />

            <TextView
                android:id="@+id/sort_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/sort_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/end_count" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/default_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/defaults"
                app:layout_constraintStart_toStartOf="@+id/sort_text"
                app:layout_constraintTop_toBottomOf="@+id/sort_text" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/date_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/date"
                app:layout_constraintStart_toStartOf="@+id/default_switch"
                app:layout_constraintTop_toBottomOf="@+id/default_switch" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/deshevle_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/deshevle"
                app:layout_constraintStart_toStartOf="@+id/date_switch"
                app:layout_constraintTop_toBottomOf="@+id/date_switch" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/dorogo_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/dorogo"
                app:layout_constraintStart_toStartOf="@+id/deshevle_switch"
                app:layout_constraintTop_toBottomOf="@+id/deshevle_switch" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filt_search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/green"
        android:padding="12dp"
        android:text="@string/coutine"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        android:layout_marginStart="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>