<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.main.add.addannounced.AddAnnouncedFragment">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name_announced"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:id="@+id/value_header"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ramka_for_editext"
            android:hint="имя заголовка"
            android:paddingStart="15dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/grafik_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/grafik_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/types_state"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@color/silver"
            android:hint="выберите из списка"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green">

            <AutoCompleteTextView
                android:id="@+id/grafic_work_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/year_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/type_year"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@color/silver"
            android:hint="выберите из списка"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/green">

            <AutoCompleteTextView
                android:id="@+id/stazh_select_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sfera_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/sfera_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/value_sfera"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ramka_for_editext"
            android:hint="cфера"
            android:maxLength="9"
            android:paddingStart="15dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/adress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/adress_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/value_company"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ramka_for_editext"
            android:hint="компания"
            android:maxLength="9"
            android:paddingStart="15dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/count_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/value_count"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ramka_for_editext"
            android:hint="зарплата"
            android:inputType="number"
            android:maxLength="9"
            android:paddingStart="15dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/tel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:visibility="visible"
            android:text="@string/tell"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/value_tell"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ramka_for_editext"
            android:gravity="start"
            android:inputType="number"
            android:visibility="visible"
            android:hint="телефон"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:textColor="@color/black" />
</LinearLayout>